LB-604 Alignments wrong on fund dashboard page  fix sort button alignment

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-filters.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-filters.sass
@@ -52,6 +52,10 @@ body
                 +breakpoint(desktop, up)
                     background: transparent
                     padding-bottom: 0
+            .button-sort
+                +breakpoint(desktop, up)
+                    padding: 0
+                    border: 0
 
         &__footer
             position: absolute
